# test_SeekThermal

./: CMakeLists.txt  README.md
src/: seekCV.cpp
